# mgec

./: .gitignore  LICENSE  README.md  meson.build
.github/workflows/: test.yml
docs/: addressing.md  cpu.md
include/: addressing.h  cpu.h  types.h
src/: addressing.c  cpu.c  meson.build
test/: test_cpu.c
